--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <h4><%= book.title %></h4>
         <p style="font-size: 13px;"><%= book.author %></p>
         <p><%= truncate(book.description, length:100) %></p>
-        <p><a href="#" class="btn btn-primary" role="button">Avalie</a></p>
+        <p><a href="#" class="btn btn-primary" role="button">Rate this book</a></p>
       </div>
     </div>
   </div>
