--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,19 @@
     <p class="alert"><%= alert %></p>
   </header>
 
-<%= yield %>
+
+<div class="container">
+  <%= yield %>
+  <hr>
+  <!-- Footer -->
+  <footer>
+      <div class="row">
+          <div class="col-lg-12">
+              <p>Copyright &copy; Your Website 2014</p>
+          </div>
+      </div>
+  </footer>
+</div>
 
 </body>
 </html>
