--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,28 @@
-<% Book.all.each do |book| %>
-  <div class="col-xs-6 col-md-3">
-    <div class="thumbnail">
-      <%= image_from_amazon book.amazon_id %>
-      <div class="caption">
-        <h4><%= book.title %></h4>
-        <p style="font-size: 13px;"><%= book.author %></p>
-        <p><%= truncate(book.description, length:100) %></p>
-        <p><a href="#" class="btn btn-primary" role="button">Rate this book</a></p>
-      </div>
+
+<!-- Title -->
+<div class="row">
+    <div class="col-lg-12">
+        <h3>Books</h3>
     </div>
-  </div>
-<% end  %>
+</div>
+
+<!-- /.row -->
+<hr>
+
+<!-- Page Features -->
+<div class="row text-center">
+  <% Book.all.each do |book| %>
+    <div class="col-md-3 col-sm-6 hero-feature">
+        <div class="thumbnail">
+            <%= image_tag book.image_book.url(:thumb) %>
+            <div class="caption">
+                <h3><%= book.title %></h3>
+                <p><%= truncate(book.description, length: 50) %></p>
+                <p>
+                  <a href="#" class="btn btn-primary">Buy Now!</a>
+                </p>
+            </div>
+        </div>
+    </div>
+  <% end  %>
+</div>
