--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,25 +1,38 @@
+<script type="text/javascript">
+  $(document).ready(function(){
+    <% @books.each do |book| %>
+        $('#book_rating_readonly<%= book.id %>').raty({
+          score : '<%= book.average_rating %>',
+          readOnly : true,
+          halfShow : true,
+          path: '/assets'
+        });
+    <% end %>
+  });
+</script>
 
 <!-- Title -->
 <div class="row">
     <div class="col-lg-12">
-        <h3>Books</h3>
+        <h3>Livros</h3>
     </div>
 </div>
 
-<!-- /.row -->
 <hr>
-
 <!-- Page Features -->
 <div class="row text-center">
-  <% Book.all.each do |book| %>
+  <% @books.each do |book| %>
     <div class="col-md-3 col-sm-6 hero-feature">
         <div class="thumbnail">
             <%= image_tag book.image_book.url(:thumb) %>
             <div class="caption">
-                <h3><%= book.title %></h3>
-                <p><%= truncate(book.description, length: 50) %></p>
+                <div id="book_rating_readonly<%= book.id %>"></div>
+                <h4><%= book.title %></h4>
                 <p>
-                  <a href="#" class="btn btn-primary">Buy Now!</a>
+                  <%= truncate(book.description, length: 50) %>
+                </p>
+                <p>
+                  <%= link_to 'Já leu esse livro ? contribua com a sua avaliação.', book_path(book) %>
                 </p>
             </div>
         </div>
