--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,13 @@
 
 <div class="container">
   <%= yield %>
-  <hr>
+
   <!-- Footer -->
   <footer>
       <div class="row">
           <div class="col-lg-12">
-              <p>Copyright &copy; Your Website 2014</p>
+              <hr>
+              <p>Copyright &copy; GoodBooks4Devs.me 2015</p>
           </div>
       </div>
   </footer>
