--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
         $.ajax({
           url:'/books/<%= @book.id %>/ratings',
           type: 'POST',
-          data: { points: score }
+          data: { points: score ? score : 0 }
         });
       }
     });
@@ -35,14 +35,18 @@
 <div class="row">
   <div class="col-md-4">
     <%= image_tag @book.image_book.url(:medium) %>
-    <div id="my_rating_book" style="margin-left: 94px;"></div>
+    <% if user_signed_in? %>
+      <div id="my_rating_book" style="margin-left: 84px;"></div>
+    <% else %>
+      <p>
+        <%= link_to 'Logue para avaliar', new_user_session_path %>
+      </p>
+    <% end %>
   </div>
 
   <div class="col-md-6">
     <h3><%= @book.title %></h3>
-    <p>
-      <div id="average_rating"></div>
-    </p>
+    <p><div id="average_rating"></div></p>
     <p><%= @book.description %></p>
     <h3>Adquira o seu em:</h3>
     <div class="form-group">
@@ -54,59 +58,28 @@
 </div>
 
 <div class="well">
-
+  <% if user_signed_in?  %>
     <div class="text-left">
       <%= form_for [@book, @comment] do |f| %>
         <%= f.label :body %>
-        <%= f.text_area :body%>
+        <%= f.text_area :body %>
         <br>
-        <%= f.submit 'Leave a Review' , class: 'btn btn-success'%>
+        <%= f.submit 'Deixe um comentário' , class: 'btn btn-success'%>
       <% end %>
     </div>
+  <% else %>
+    <%= link_to 'Logue para comentar', new_user_session_path %>
+  <% end %>
 
     <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">10 days ago</span>
-            <p>This product was great in terms of quality. I would definitely buy another!</p>
-        </div>
-    </div>
-
+    <% @book.comments.each do |comment| %>
+      <div class="row">
+          <div class="col-md-12">
+            <%= comment.user.name_and_last_name %>
+            <span class="pull-right"><%= time_ago_in_words(comment.created_at) %> Ago</span>
+            <p><%= comment.body %></p>
+          </div>
+      </div>
+    <% end %>
     <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">12 days ago</span>
-            <p>I've alredy ordered another one!</p>
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">15 days ago</span>
-            <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
-        </div>
-    </div>
-
 </div>
