--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -50,3 +50,21 @@ h6, .h6 {
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
+#average_rating {
+  display: inline;
+}
+
+#comment_body {
+  width: 28%;
+}
+
+.form-control {
+  width: 24%;
+}
+
+.field_with_errors .form-control {
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
