--- a/app/views/application/_form_errors.erb
+++ b/app/views/application/_form_errors.erb
@@ -1,5 +1,5 @@
 <%if record.errors.any?%>
-  <div class="error-messages">
+  <div class="bg-danger">
     <p>
       Verifique o Formulário abaixo:
     </p>
