--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,32 @@
-<h1>Edit books</h1>
+<h1>Edit Book</h1>
+<hr>
 <%= render 'form_errors', record:@book %>
 
-<%= form_for @book do |f| %>
-  <div>
+<%= form_for @book ,:html => { :multipart => true },class: "form-horizontal" do |f| %>
+  <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div>
+  <div class="form-group">
+    <iv>
+  <div class="form-group">
     <%= f.label :author %>
-    <%= f.text_field :author %>
+    <%= f.text_field :author, class: "form-control" %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :category %>
-    <%= f.select :category_id, Category.all.collect {|category| [ category.name, category.id ] } %>
+    <%= f.select :category_id,
+        Category.all.collect {|category| [ category.name, category.id ] },
+              {include_blank: true}, { :class => 'form-control' } %>
   </div>
-  <div>
+  <div class="form-group">
+    <%= f.label :image_book %>
     <%= f.file_field :image_book %>
+     <p class="help-block">Selecione uma imagem.</p>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, rows:"3", class:"form-control"%>
   </div>
-  <%= f.submit 'Edit book'%>
+  <%= f.submit 'Edit book',class: "btn btn-primary"%>
 <% end %>
