--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Manager Categories</h1>
+<hr>
 <%= render 'form_errors', record:@category %>
 
-<%= form_for @category do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit 'Add category'%>
+<%= form_for @category,class: "form-horizontal" do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <%= f.submit 'Add category', class: "btn btn-primary" %>
 <% end %>
 
 <br/><br/>
