Ajustes no layout.

--- a/app/views/application/_form_errors.erb
+++ b/app/views/application/_form_errors.erb
@@ -1,5 +1,6 @@
 <%if record.errors.any?%>
-  <div class="bg-danger">
+  <div class="alert alert-danger fade in">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <p>
       Verifique o Formulário abaixo:
     </p>
