--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,5 +1,5 @@
 <tr>
   <td> <%= category.name %> </td>
-  <td> <%= link_to 'Edit', edit_category_path(category) %> </td>
-  <td> <%= link_to 'Remove', category, method: :delete, data: { confirm: "Are you sure?" } %> </td>
+  <td> <%= link_to 'Editar', edit_category_path(category),class: "btn btn-primary" %> </td>
+  <td> <%= link_to 'Remover', category, class: "btn btn-primary",method: :delete, data: { confirm: "Tem certeza disso?" } %> </td>
 </tr>
