--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header>
-    <%= render 'layouts/nav'%>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  </header>
+  <div class="container">
+    <header>
+      <%= render 'layouts/nav'%>
+      <% if notice %>
+        <div class="alert alert-success fade in">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <%= notice %>
+        </div>
+      <% end %>
+      <% if alert %>
+        <div class="alert alert-danger fade in">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <%= alert %>
+        </div>
+      <% end %>
 
-
-<div class="container">
-  <%= yield %>
-
-  <!-- Footer -->
-  <footer>
-      <div class="row">
-          <div class="col-lg-12">
-              <hr>
-              <p>Copyright &copy; GoodBooks4Devs.me 2015</p>
-          </div>
-      </div>
-  </footer>
-</div>
-
+    </header>
+    <%= yield %>
+  </div>
 </body>
 </html>
