--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -41,7 +41,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #E3E3E3
 }
 
 h4, .h4,
@@ -60,11 +60,27 @@ h6, .h6 {
 }
 
 .form-control {
-  width: 24%;
+  width: 290px;
 }
 
 .field_with_errors .form-control {
   border-color: #a94442;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.table {
+  width: 70%;
+}
+
+.comment-username {
+  display: inline;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.navbar-form {
+  margin-left: 273px;
 }
