--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,15 @@
       score: '<%= @book.average_rating %>',
       path: '/assets'
     });
+
+    <% @book.comments.each do |comment| %>
+        $('#rating_user_in_comment<%= comment.id %>').raty({
+          score : '<%= comment.user.rating_by_user(@book) %>',
+          readOnly : true,
+          halfShow : true,
+          path: '/assets'
+        });
+    <% end %>
   });
 </script>
 
@@ -47,8 +56,7 @@
   <div class="col-md-6">
     <h3><%= @book.title %></h3>
     <p>
-      <div id="average_rating">
-      </div>
+      <div id="average_rating"></div>
       <%= link_to @book.amount_of_ratings %>
     </p>
     <p><%= @book.description %></p>
@@ -57,6 +65,10 @@
       <%= select_tag "category",
           options_for_select(Category.all.collect {|category| [ category.name, category.id ] }),
         class:'btn dropdown-toggle btn-default' %>
+        <% if can?(:manage, :all) %>
+          <%= link_to 'Editar livro', edit_book_path(@book), class: 'btn btn-primary'%>
+          <%= link_to 'Remover livro', @book, class: 'btn btn-primary', method: :delete, data: { confirm: "Tem certeza que deseja remover esse livro ?" } %>
+        <% end %>
     </div>
   </div>
 </div>
@@ -68,7 +80,7 @@
           <%= f.label :body %>
           <%= f.text_area :body, class: 'form-control', rows: '3'%>
         </div>
-        <%= f.submit 'Deixe um comentário' , class: 'btn btn-success'%>
+        <%= f.submit 'Deixe um comentário' , class: 'btn btn-primary'%>
       <% end %>
     </div>
   <% else %>
@@ -78,7 +90,10 @@
     <% @book.comments.each do |comment| %>
       <div class="row">
           <div class="col-md-12">
-            <h4><%= comment.user.name_and_last_name %></h4>
+            <div class="form-group">
+              <b><%= comment.user.name_and_last_name %></b>
+              <div id="rating_user_in_comment<%= comment.id %>" class="comment-username"></div>
+            </div>
             <span class="pull-right"><%= time_ago_in_words(comment.created_at) %> Ago</span>
             <p><%= comment.body %></p>
           </div>
