--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,8 +1,10 @@
-<h1>Edit Category</h1>
+<h1>Editar Categorias</h1>
 <%= render 'form_errors', record:@category %>
 
-<%= form_for @category  do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit 'Edit category'%>
+<%= form_for @category,class: "form-horizontal" do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <%= f.submit 'Editar categoria', class: "btn btn-primary" %>
 <% end %>
