--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,7 @@
-<script type="text/javascript">
-  $(document).ready(function(){
-    <% @books.each do |book| %>
-        $('#book_rating_readonly<%= book.id %>').raty({
-          score : '<%= book.average_rating %>',
-          readOnly : true,
-          halfShow : true,
-          path: '/assets'
-        });
-    <% end %>
-  });
-</script>
 
+<script type="text/javascript">
+  <%= render 'index.js.erb'%>
+</script>
 <!-- Title -->
 <div class="row">
     <div class="col-lg-12">
