Finalizando a implementação da funcionalidade de like e ajustes no layout.

--- a/app/views/books/_show.js.erb
+++ b/app/views/books/_show.js.erb
@@ -35,5 +35,11 @@ $(document).ready(function(){
         e.preventDefault();
         $("#comment-replys<%= comment.id %>").toggle();
       });
+
+      <% if current_user.voted_for? comment %>
+        $("#like-link<%= comment.id %>").text('Desfazer');
+      <% else %>
+        $("#like-link<%= comment.id %>").text('Gostei');
+      <% end %>
   <% end %>
 });
