--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,20 +27,21 @@
 
   <div class="col-md-6">
     <h3><%= @book.title %></h3>
+    <h5>Por: <i><%= @book.author %></i></h5>
     <p>
       <div id="average_rating"></div>
       <%= link_to @book.amount_of_ratings %>
     </p>
     <p><%= @book.description %></p>
-    <h3>Adquira o seu em:</h3>
     <div class="form-group">
-      <%= select_tag "category",
-          options_for_select(Category.all.collect {|category| [ category.name, category.id ] }),
-        class:'btn dropdown-toggle btn-default' %>
-        <% if can?(:manage, :all) %>
-          <%= link_to 'Editar livro', edit_book_path(@book), class: 'btn btn-primary'%>
-          <%= link_to 'Remover livro', @book, class: 'btn btn-primary', method: :delete, data: { confirm: "Tem certeza que deseja remover esse livro ?" } %>
+      <% if can?(:manage, :all) %>
+        <%= link_to edit_book_path(@book), class: 'btn btn-primary' do %>
+          <span class="glyphicon glyphicon-book"></span>
         <% end %>
+        <%= link_to @book, class: 'btn btn-primary', method: :delete, data: { confirm: "Tem certeza que deseja remover esse livro ?" } do %>
+          <span class="glyphicon glyphicon-trash"></span>
+        <% end  %>
+      <% end %>
     </div>
   </div>
 </div>
