--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -12,7 +12,8 @@
     e.preventDefault();
     $("#comment-replys<%= @comment.id %>").toggle();
   });
-
+  
+  //apply rating for new comment
   $('#rating_user_in_comment<%= @comment.id %>').raty({
     score : '<%= @comment.user.rating_by_user(@book) %>',
     readOnly : true,
