Finalizando a implementação do search,autocomplete e ajuste no upload do livro para receber mais 1 tamanho de imagem.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -94,3 +94,22 @@ h6, .h6 {
   display: inline;
   margin: 3px;
 }
+
+.list_item_container {
+    width:250px;
+    height: 80px;
+    padding: 5px 0;
+}
+
+.image {
+    width: 72px;
+    height: 52px;
+    margin-right: 10px;
+    float: left;
+}
+
+.description {
+    font-style: italic;
+    font-size: 0.8em;
+    color: gray;
+}
