--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,46 +1,28 @@
-<h1>Manage Books</h1>
+
+<script type="text/javascript">
+  <%= render 'index.js.erb'%>
+</script>
+<!-- Title -->
+<div class="row">
+    <div class="col-lg-12">
+        <h3>Livros</h3>
+    </div>
+</div>
+
 <hr>
-<%= render 'form_errors', record:@book %>
 
-<%= form_for @book ,:html => { :multipart => true },class: "form-horizontal" do |f| %>
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <iv>
-  <div class="form-group">
-    <%= f.label :author %>
-    <%= f.text_field :author, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :category %>
-    <%= f.select :category_id,
-        Category.all.collect {|category| [ category.name, category.id ] },
-              {include_blank: true}, { :class => 'form-control' } %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image_book %>
-    <%= f.file_field :image_book %>
-     <p class="help-block">Selecione uma imagem.</p>
-  </div>
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description, rows:"3", class:"form-control"%>
-  </div>
-  <%= f.submit 'Add book',class: "btn btn-primary"%>
-<% end %>
-
-<br/><br/>
-<% if @books && !@books.empty? %>
-  <table border="1">
-    <tr>
-      <th> Title </th>
-      <th> Author </th>
-      <th> Category </th>
-      <th> Edit </th>
-      <th> Remove </th>
-    </tr>
-    <%= render @books %>
-  </table>
-<% end %>
+<!-- Page Features -->
+<div class="row text-center">
+  <% @books.each do |book| %>
+    <div class="col-md-3 col-sm-6 hero-feature">
+        <div class="thumbnail">
+          <%= link_to image_tag(book.image_book.url(:thumb)), book_path(book) %>
+          <div class="caption">
+            <div id="book_rating_readonly<%= book.id %>"></div>
+            <h4><%= truncate(book.title, length: 20) %></h4>
+            <p><%= truncate(book.description, length: 80) %></p>
+          </div>
+        </div>
+    </div>
+  <% end  %>
+</div>
