Ajuste no navbar.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,6 +45,8 @@
     </div>
   </div>
 </div>
+
+<div class="row"></div>
 <div class="well">
   <% if user_signed_in?  %>
     <div class="text-left">
