--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 <hr>
 
 <!-- Page Features -->
-<div class="row text-center">
+<div class="row text-center" id="index_books">
   <%= render @books %>
 </div>
 
