--- a/app/views/shared/_paginate.js.erb
+++ b/app/views/shared/_paginate.js.erb
@@ -1,5 +1,6 @@
 <% if resources.next_page %>
-  alert("Hello! I am an alert box!!");
+  $(".pagination").replaceWith("<%= j will_paginate(resources) %>");
+  $(".pagination").hide();
 <% else %>
   $(window).off('scroll');
   $("#endless-scroll").remove();
