--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,10 +1,12 @@
-<div class="col-md-3 col-sm-6 hero-feature">
-    <div class="thumbnail">
-      <%= link_to image_tag(book.image_book.url(:thumb)), book_path(book) %>
-      <div class="caption">
-        <div id="book_rating_readonly<%= book.id %>"></div>
-        <h4><%= truncate(book.title, length: 20) %></h4>
-        <p><%= truncate(book.description, length: 80) %></p>
+<%= link_to book_path(book) do%>
+  <div class="col-md-3 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <%= image_tag(book.image_book.url(:thumb))%>
+        <div class="caption">
+          <div id="book_rating_readonly<%= book.id %>"></div>
+          <h4><%= truncate(book.title, length: 20) %></h4>
+          <p><%= truncate(book.description, length: 80) %></p>
+        </div>
       </div>
-    </div>
-</div>
+  </div>
+<% end %>
